--- a/auto/Vagrantfile
+++ b/auto/Vagrantfile
@@ -94,7 +94,7 @@ Vagrant.configure(2) do |config|
         v.cpus = vm_conf['cpus']
         v.memory = vm_conf['memory']
         v.linked_clone = use_linked_clones
-        (vm_conf['networks'] + extra_networks).each_with_index do |n, i|
+        (vm_conf['network_configuration']['networks'] + extra_networks).each_with_index do |n, i|
           a = n['vbox_arguments']
           # Enable any bridge interfaces conditionally
           if a[3] != 'BRIDGE_NET' || (use_bridge and ! BRIDGE_NET.empty?) then
