--- a/auto/ansible/tasks/network_provision.yml
+++ b/auto/ansible/tasks/network_provision.yml
@@ -1,12 +1,12 @@
 ---
 - name: Linux configuration
   block:
-  - name: Configure interfaces.
+  - name: (linux) Configure interfaces.
     ansible.builtin.template:
       src: templates/linux_interfaces.j2
       dest: /etc/network/interfaces
 
-  - name: Set hostname.
+  - name: (linux) Set hostname.
     ansible.builtin.copy:
       content: "{{ inventory_hostname }}\n"
       dest: /etc/hostname
@@ -17,11 +17,17 @@
 
 - name: FreeBSD configuration
   block:
-  - name: Configure interfaces (in rc.conf)
+  - name: (FreeBSD) Configure interfaces (in rc.conf)
     ansible.builtin.template:
       src: templates/freebsd_rc.conf.j2
       dest: /etc/rc.conf
 
   - ansible.builtin.import_tasks:
       file: tasks/resolv.conf.yml
+
+  - name: (FreeBSD) Making boot faster; always autoboot.
+    ansible.builtin.copy:
+      content: 'autoboot_delay="-1"'
+      dest: /boot/loader.conf
+
   when: network_configuration.system == 'freebsd'
