--- a/auto/ansible/tasks/network_provision.yml
+++ b/auto/ansible/tasks/network_provision.yml
@@ -33,7 +33,7 @@
 
 - name: FreeBSD configuration
   block:
-  - name: (FreeBSD) Configure interfaces (in rc.conf)
+  - name: (FreeBSD) Configure interfaces (in rc.conf).
     ansible.builtin.template:
       src: templates/freebsd_rc.conf.j2
       dest: /etc/rc.conf
