--- a/auto/Vagrantfile
+++ b/auto/Vagrantfile
@@ -59,7 +59,14 @@ Vagrant.configure(2) do |config|
   vms = hosts_conf['all']['children']['vms']['hosts']
   extra_vms = {}
   if !extra_hosts_conf.empty? then
-    extra_vms = extra_hosts_conf['all']['children']['vms']['hosts']
+    if ! (get_value extra_hosts_conf['all']['children'], 'vms').empty? then
+      hosts = extra_hosts_conf['all']['children']['vms']['hosts']
+      extra_vms = extra_vms.merge(hosts.nil? ? {} : hosts)
+    end
+    if ! (get_value extra_hosts_conf['all']['children'], 'root_servers').empty? then
+      hosts = extra_hosts_conf['all']['children']['root_servers']['hosts']
+      extra_vms = extra_vms.merge(hosts.nil? ? {} : hosts)
+    end
   end
   all_vms = vms.merge(extra_vms.nil? ? {} : extra_vms)
 
@@ -102,6 +109,11 @@ Vagrant.configure(2) do |config|
             # Assumption is that vbox_arguments come in pairs of ('--option', 'value')
             # Force the NIC type because some systems rely on it for naming e.g., FreeBSD
             v.customize ["modifyvm", :id, a[0]+"#{i+2}", a[1], a[2]+"#{i+2}", eval(a[3]), "--nictype#{i+2}", "82540EM"]
+            # In some versions of VirtualBox the interface cable is not
+            # connected by default; explicitly set this
+            v.customize ["modifyvm", :id, "--cableconnected#{i+2}", "on"]
+            # Ubuntu boxes would write debugging logs locally; disable them
+            v.customize ["modifyvm", :id, "--uartmode1", "disconnected"]
           end
         end
       end
@@ -144,6 +156,7 @@ Vagrant.configure(2) do |config|
       # This is a dummy ping command to make Vagrant auto generate an Ansible
       # inventory. Run always so that the inventory is always updated.
       h.vm.provision "ansible", run: "always" do |ansible|
+        # XXX DISABLED: Ansible will read the environment variable if present
         #ansible.config_file = ansible_cfg
         ansible.playbook = 'ansible/dummy_vagrant_provision.yml'
       end
