Do not disable NetworkManager in CentOS

--- a/auto/ansible/tasks/network_provision.yml
+++ b/auto/ansible/tasks/network_provision.yml
@@ -93,10 +93,10 @@
       dest: "/etc/sysconfig/network-scripts/route6-{{item.name}}"
     loop: "{{ network_configuration.networks }}"
 
-  - name: (CentOS) Disable NetworkManager.
-    ansible.builtin.systemd:
-      name: NetworkManager
-      enabled: false
+      #- name: (CentOS) Disable NetworkManager.
+      #  ansible.builtin.systemd:
+      #    name: NetworkManager
+      #    enabled: false
 
   - ansible.builtin.import_tasks:
       file: tasks/resolv.conf.yml
