tcpdumpd service for gateway

--- a/auto/ansible/provision_gateway-vm.yml
+++ b/auto/ansible/provision_gateway-vm.yml
@@ -15,3 +15,9 @@
           - iptables
         state: present
         update_cache: yes
+
+    - name: Install tcpdump service file
+      ansible.builtin.copy:
+        src: files/gateway-vm/tcpdumpd.service
+        dest: /etc/systemd/system
+
