Some ground work for running tests

--- a/auto/ansible/files/gateway-vm/tcpdumpd.service
+++ b/auto/ansible/files/gateway-vm/tcpdumpd.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Restart=always
 RestartSec=30
-Environment="TCPDUMP_FORMAT=%%Y-%%m-%%d__%%H-%%M"
+Environment="TCPDUMP_FORMAT=%%Y-%%m-%%d__%%H-%%M-%%S"
 ExecStartPre=/bin/mkdir -p /var/log/tcpdumpd/
 ExecStart=/usr/bin/tcpdump -i enp0s10 -G 1800 -s 65535 -w '/var/log/tcpdumpd/${TCPDUMP_FORMAT}.pcap'
 ExecStop=/bin/kill -s HUP $MAINPID
