--- a/auto/ansible/provision_resolvers-vm.yml
+++ b/auto/ansible/provision_resolvers-vm.yml
@@ -66,6 +66,22 @@
         name: meson
         executable: pip3
 
+    - name: Create directory for root.hints
+      file:
+        path: /usr/share/dns
+        state: directory
+        owner: root
+        group: root
+        mode: 0755
+
+    - name: Install default root.hints
+      ansible.builtin.copy:
+        src: "files/root.hints"
+        dest: "/usr/share/dns/root.hints"
+        owner: root
+        group: root
+        mode: 0644
+
 - hosts: build_group
   gather_facts: false
   become: true
