Introduce inception for parallel compilation on multiple hosts

--- a/auto/ansible/provision_resolvers-vm.yml
+++ b/auto/ansible/provision_resolvers-vm.yml
@@ -5,9 +5,6 @@
 
   tasks:
     - ansible.builtin.import_tasks:
-        file: tasks/read_build_configuration.yml
-
-    - ansible.builtin.import_tasks:
         file: tasks/install_generic_packages.yml
 
     - name: Install VM specific packages (part I).
@@ -68,11 +65,17 @@
         name: meson
         executable: pip3
 
-- hosts: build_group
-  gather_facts: false
-  become: true
-  vars:
-    on_host: resolvers-vm
-  tasks:
     - ansible.builtin.import_tasks:
-        file: tasks/compile_software.yml
+        file: tasks/inception/incept.yml
+      vars:
+        incept_title: "Incept parallel compilation."
+        incept_playbook: files/inception_playbook.yml
+        incept_task: tasks/inception/compile_software.yml
+        incept_variables:
+          software_source_dir: "{{ BUILD_SOURCE_DIR }}"
+          software_target_dir: "{{ BUILD_TARGET_DIR }}"
+          software_build_config: "{{ build_config }}"
+        incept_copy_files:
+          - tasks/read_build_configuration.yml
+          - tasks/inception/read_inception_variables.yml
+          - files/pdns_patches/
