--- a/auto/ansible/tasks/inception/compile_software.yml
+++ b/auto/ansible/tasks/inception/compile_software.yml
@@ -1,19 +1,36 @@
 ---
+- name: Read possible inception variables.
+  import_tasks:
+    file: tasks/inception/read_inception_variables.yml
+
+- name: Check required variables for this task.
+  assert:
+    that:
+      - software_source_dir is defined
+      - software_target_dir is defined
+    fail_msg: "Not all required variables are defined!"
+  delegate_to: localhost
+
 - name: Per software compilation tasks.
   vars:
-    this_source_dir: "{{ BUILD_SOURCE_DIR }}/{{ host_name }}"
-    this_target_dir: "{{ BUILD_TARGET_DIR }}/{{ host_name }}"
+    this_source_dir: "{{ software_source_dir }}/{{ software_name }}"
+    this_target_dir: "{{ software_target_dir }}/{{ software_name }}"
   block:
   - name: Make sure the needed directories are there.
-    ansible.builtin.file:
+    file:
       path: "{{ item }}"
       state: directory
     with_items:
       - "{{ this_source_dir }}"
       - "{{ this_target_dir }}"
 
+  - name: Make sure the zone configuration directory is there.
+    file:
+      path: "{{ this_target_dir }}/zone_config.d"
+      state: directory
+
   - name: Check if we already have the source.
-    ansible.builtin.find:
+    find:
       paths: "{{ this_source_dir }}"
       patterns: ".received.this"
       file_type: file
@@ -21,22 +38,22 @@
     register: software_received
 
   - name: Get the source and decompress.
-    ansible.builtin.unarchive:
+    unarchive:
       src: "{{ url }}"
-      dest: "{{ BUILD_SOURCE_DIR }}/"
+      dest: "{{ software_source_dir }}/"
       remote_src: yes
       owner: "root"
       group: "root"
     when: software_received.files == []
 
   - name: Mark as received.
-    ansible.builtin.file:
+    file:
       path: "{{ this_source_dir }}/.received.this"
       state: touch
     when: software_received.files == []
 
   - name: Copy over files.
-    ansible.builtin.copy:
+    copy:
       src: "{{ item.src }}"
       dest: "{{ this_source_dir }}/{{ item.dest }}"
     loop: "{{ files_copy }}"
@@ -44,7 +61,7 @@
     register: copied_files
 
   - name: Check if we already built the source.
-    ansible.builtin.find:
+    find:
       paths: "{{ this_target_dir }}"
       patterns: ".compiled.this"
       file_type: file
@@ -52,16 +69,15 @@
     register: software_compiled
 
   - name: Clear the build status.
-    ansible.builtin.file:
+    file:
       path: "{{ this_target_dir }}/.compiled.this"
       state: absent
     when: copied_files is changed
 
   - name: Build.
-    ansible.builtin.shell:
+    shell:
       cmd: "{{ make_str.format(PREFIX=this_target_dir) ~ ' && touch ' ~ this_target_dir ~ '/.compiled.this' }}"
       chdir: "{{ this_source_dir }}"
     when: software_compiled.files == [] or copied_files is changed
 
-
-  delegate_to: "{{ on_host }}"
+  delegate_to: localhost
