--- a/auto/ansible/tasks/read_build_configuration.yml
+++ b/auto/ansible/tasks/read_build_configuration.yml
@@ -1,20 +1,28 @@
 ---
+- name: Check required variables for this task.
+  assert:
+    that:
+      - software_source_dir is defined
+      - software_target_dir is defined
+      - software_build_config is defined
+    fail_msg: "Not all required variables are defined!"
+
 - name: Add the build software as hosts.
-  ansible.builtin.add_host:
+  add_host:
     name: "{{ item.key }}"
-    groups: build_group
+    groups: "{{ inventory_hostname | replace('-', '_') }}_build_group"
     url: "{{ item.value['url'] }}"
-    make_str: "{{ build_config['templates'][item.value['make_str']] }}"
+    make_str: "{{ software_build_config['templates'][item.value['make_str']] }}"
     files_copy: "{{ ('files_copy' in item.value and item.value['files_copy']) or [] }}"
     # This is needed when delegate_to is used to preserve the hostname
     # since Ansible uses the delegate_to hostname as the inventory_hostname
-    host_name: "{{ item.key }}"
-  loop: "{{ build_config['software'] | dict2items }}"
+    software_name: "{{ item.key }}"
+  loop: "{{ software_build_config['software'] | dict2items }}"
 
 - name: Make sure the needed directories are there.
-  ansible.builtin.file:
+  file:
     path: "{{ item }}"
     state: directory
   loop:
-    - "{{ BUILD_SOURCE_DIR }}"
-    - "{{ BUILD_TARGET_DIR }}"
+    - "{{ software_source_dir }}"
+    - "{{ software_target_dir }}"
