Per host packages and same Ansible version for inception

--- a/auto/ansible/provision_root-servers.yml
+++ b/auto/ansible/provision_root-servers.yml
@@ -5,10 +5,12 @@
 
   tasks:
     - ansible.builtin.import_tasks:
-        file: tasks/install_generic_packages.yml
+        file: tasks/install_server_packages.yml
+      vars:
+        server_packages: "{{ build_config['packages'] }}"
 
     - ansible.builtin.import_tasks:
-        file: tasks/install_building_packages.yml
+        file: tasks/install_generic_packages.yml
 
     - ansible.builtin.import_tasks:
         file: tasks/inception/incept.yml
