--- a/auto/ansible/tasks/install_server_packages.yml
+++ b/auto/ansible/tasks/install_server_packages.yml
@@ -1,45 +1,26 @@
 ---
 - name: (Linux) Install packages for building.
   ansible.builtin.apt:
-    pkg:
-      - build-essential
-      - autoconf
-      - libtool
-      - pkg-config
-      - libevent-dev
-      - libssl-dev
-      - python-ply
-      - python3-ply
-      - libmaxminddb-dev
-      - libjson-c-dev
-      - protobuf-c-compiler
-      - libprotobuf-c-dev
-      - libfstrm-dev
-      - libuv1-dev
-      - libcap-dev
-      - libgnutls28-dev
-      - liburcu-dev
-      - liblmdb-dev
-      - libedit-dev
+    pkg: "{{ server_packages }}"
     state: present
     update_cache: yes
   when: network_configuration.system in ['linux', 'ubuntu']
 
 - name: (FreeBSD) Install packages for building.
   community.general.pkgng:
-    name: []
+    name: "{{ server_packages }}"
     state: present
   when: network_configuration.system == 'freebsd'
 
 - name: (NetBSD) Install packages for building.
   community.general.pkgin:
-    name: []
+    name: "{{ server_packages }}"
     state: present
   when: network_configuration.system == 'netbsd'
 
 - name: (CentOS) Install packages for building.
   ansible.builtin.yum:
-    name: []
+    name: "{{ server_packages }}"
     state: present
   when: network_configuration.system == 'centos'
 
