--- a/auto/ansible/tasks/inception/read_inception_variables.yml
+++ b/auto/ansible/tasks/inception/read_inception_variables.yml
@@ -1,7 +1,7 @@
 ---
 - block:
   - name: Check for inception file.
-    find:
+    ansible.builtin.find:
       paths: /root/local_ansible
       patterns: inception_variables.yml
       file_type: file
@@ -9,7 +9,7 @@
     register: inception_file
 
   - name: Read inception variables.
-    include_vars:
+    ansible.builtin.include_vars:
       file: /root/local_ansible/inception_variables.yml
     when: inception_file.files != []
 
