--- a/auto/ansible/tasks/rssac028-appendix-a/do-query.yml
+++ b/auto/ansible/tasks/rssac028-appendix-a/do-query.yml
@@ -1,13 +1,18 @@
 ---
 - name: Determine software version
   ansible.builtin.command: "drill @172.21.113.1 version.bind CH TXT"
-  delegate_to: resolvers-vm
   register: version_query
 
 - name: Do query {{ msm.query }}
   ansible.builtin.command: "{{ msm.query }}"
-  delegate_to: resolvers-vm
   register: drill_result
+
+- name: Copy query result
+  delegate_to: localhost
+  become: false
+  ansible.builtin.copy:
+    content: "{{ '\n'.join(drill_result.stdout_lines) }}"
+    dest: "results/rssac028-appendix-a/{{ version_query.stdout_lines[6].split('\t')[-1].strip('\x22') }}-{{ scenario }}-{{ msm.descr }}.txt"
 
 - name: Log result for {{ msm.descr }}
   delegate_to: localhost
